--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,25 @@
-.App {
-  text-align: center;
+@font-face {
+  font-family: Open_Sans;
+  src: url("Raleway/static/Raleway-Regular.ttf") format("truetype");
+  font-weight: 400;
+  font-size: 2rem;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+*{
+  font-family: "Open_Sans", sans-serif;
 }
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 6vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  font-size: 1.2rem;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
   color: white;
+  padding: 0 0.75rem;
 }
 
 .App-link {
   color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
