--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,20 @@
 @font-face {
   font-family: Open_Sans;
-  src: url("Raleway/static/Raleway-Regular.ttf") format("truetype");
-  font-weight: 400;
-  font-size: 2rem;
+  src: url("font/Raleway/static/Raleway-Medium.ttf") format("truetype");
 }
 
 *{
-  font-family: "Open_Sans", sans-serif;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 6vh;
+  position: fixed;
+  top: 0;
+  z-index: 10;
+  width: 100vw;
+  height: 6vh;
   display: flex;
   flex-direction: column;
-  font-size: 1.2rem;
+  font-size: 1.3rem;
   justify-content: center;
   color: white;
   padding: 0 0.75rem;
